--- a/google30502cfa0f7fe4cc.html
+++ b/google30502cfa0f7fe4cc.html
@@ -1,1 +1,1 @@
-<html><head><meta name="google-site-verification" content="google30502cfa0f7fe4cc.html" /></head><body></body></html>
+google-site-verification: google30502cfa0f7fe4cc.html
